Finished ex1e
Signed-off-by: MehimoNemo <throwaway113371@gmail.com>